<resources>
    <string name="app_name">MadarSoft Android Task</string>
    <string name="age">Age</string>
    <string name="job_title">Job Title</string>
    <string name="applicant_name">Applicant Name</string>
    <string name="show_saved_applicants">Show saved applicants</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>
    <string name="applicant_added_successfully">Applicant added successfully to our records .</string>
    <array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </array>
</resources>